# mcp-analyzer-api

./: .env.example  Dockerfile  EXAMPLE_RESPONSE.md  README.md  client.py  convert-python-to-typescript.md  docker-entrypoint.sh  proj-1-github-repo.md  pyproject.toml
servers/: github_analysis_server.py  test_server.py
servers/github_analysis/: analysis.py  server.py  utils.py
servers/github_analysis/language_analysis/: __init__.py  cpp_analysis.py  go_analysis.py  java_analysis.py  php_analysis.py  python_analysis.py  rb_analysis.py  ts_analysis.py
